# AgentBus

./: .env.example  .gitignore  DEVELOPMENT.md  ENHANCEMENTS.md  QUICK_START.md  README.md  __init__.py  channels_config.json  cli.py  debug_snapshot.py  example_channels_config.yaml  example_plugins_config.json  logging_requirements.txt  main.py  manager.py  mock_vllm_server.py  pyproject.toml  quick_test_vllm.py  requirements.txt  revert_imports.py  standardize_imports.py  start_agentbus.py  test_config.json  test_error.txt  test_mock_vllm.py  test_output.txt  verify_glm.py  verify_vllm.py
Kode-cli-main/: README_CN.md  requirements.txt
WIP/: API_DESIGN.md  DATA_SCHEMA.md  DEVELOPMENT_PLAN.md  PRD_TECHNICAL.md  TESTING_REQUIREMENTS.md
agentbus/: .env.example  ENHANCEMENTS.md  cli.py  pyproject.toml  requirements.txt
agentbus/api/routes/: agent.py
agentbus/api/schemas/: message.py
agentbus/api/websockets/: handler.py
agentbus/core/agent/: __init__.py  loop.py  orchestrator.py
agentbus/core/memory/: __init__.py
agentbus/docs/: HUMAN_IN_LOOP.md
agentbus/runtime/: __init__.py
agentbus/runtime/remote/: environment.py
agentbus/services/: cost_tracker.py  workspace.py
agentbus/static/js/: app.js
agentbus/tests/: test_sessions.py  test_tools.py
agentbus/tools/: __init__.py  base.py  file_tools.py  human_in_loop.py  registry.py  search.py  terminal.py
agentbus_logging/: __init__.py  alerting.py  enhanced_logging.py  log_analytics.py  log_manager.py  log_query.py  log_storage.py  metrics.py  remote_transport.py
agents/: PROJECT_SUMMARY.md  README.md  __init__.py  complete_example.py  demo.py  test_framework.py  validate_framework.py
api/: __init__.py  main.py
auto_reply/: MIGRATION_REPORT.md  README.md  __init__.py  command_detection.py  commands_registry.py  demo.py  dispatch.py  group_activation.py  media_processor.py  reply_strategy.py  simple_demo.py
automation/: CHANGELOG.md  IMPLEMENTATION_REPORT.md  README.md  __init__.py  browser.py  demo.py  element_finder.py  examples.py  form_handler.py  page_navigator.py  playwright_manager.py  requirements.txt  screenshot.py  setup.py  test_automation.py
channels/: __init__.py  base.py  example.py  manager.py  test_channel.py
cli/: README.md  __init__.py  demo.py  main.py
config/: IMPLEMENTATION_SUMMARY.md  README.md  __init__.py  backup_manager.py  base.toml  config_manager.py  config_types.py  development.toml  env_loader.py  example_usage.py  file_manager.py  production.toml  profile_manager.py  security.py  settings.py  test_config_system.py  watcher.py
core/: __init__.py  app.py  auth.py  dependencies.py  main_app.py  models.py  settings.py
daemon/: README.md  cli.ts  config.ts  constants.ts  daemon.ts  example-config.json  examples.ts  index.ts  install.sh  launchd.ts  monitor.ts  package.json  paths.ts  schtasks.ts  service-manager.ts  systemd.ts  test.ts  tsconfig.json  types.ts  utils.ts
data/: communication_map.yaml  knowledge_bus.json
docs/: EXTENSION_DEVELOPMENT_GUIDE.md  EXTENSION_GUIDE.md  HUMAN_IN_LOOP.md  QUICK_EXTENSION_GUIDE.md
examples/: README.md  agent_example.py  extension_examples.py  plugin_example.py  web_explorer_usage.py  web_test_agent_example.py
extensions/: __init__.py  base.py  manager.py  registry.py  sandbox.py
frontend/: package-lock.json  package.json  tailwind.config.js
gateway/: README.md  __init__.py  demo.py  requirements.txt
hooks/: README.md  __init__.py  config.py  core.py  internal_hooks.py  loader.py  manager.py  priority.py  types.py
infrastructure/: README.md  __init__.py  example_usage.py
integrations/: __init__.py  java_client.py  user_preferences.py
media_understanding/: README.md  __init__.py  audio_understanding.py  core.py  demo.py  detector.py  document_understanding.py  example.py  image_understanding.py  requirements.txt  setup.py  test_media_understanding.py  types.py  video_understanding.py
memory/: README.md  __init__.py  batch_processor.py  context_cache.py  conversation_history.py  embedding_manager.py  enhanced_memory_manager.py  example_usage.py  hybrid_search.py  memory_index.py  user_memory.py  vector_store.py
models/: user.py
plugins/: __init__.py  core.py  discord_channel_plugin.py  example_plugin.py  example_skill.py  hitl_plugin.py  knowledge_plugin.py  manager.py  multi_model_plugin.py  stream_plugin.py  (+1 more)
(+316 files in other folders)
